# zswm

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Makefile  config.h  draw.c  draw.h  event.c  event.h  global.h  test.c  types.h  utils.c  utils.h  window.c  window.h  zswm.c  zswm.h
src/: CMakeLists.txt  assets.h.in  config.h  draw.c  draw.h  event.c  global.h  layout.c  layout.h  res.c  res.h  types.h  user-action.c  user-action.h  utils.c  utils.h  window.c  window.h  xcursor.c  xcursor.h  zswm.c
src/status/: CMakeLists.txt  cpu.c  cpu.h  mem.c  mem.h  net.c  net.h  pulse.c  pulse.h  status.c  status.h  time.c  time.h  utils.c  utils.h
